fix weird background jump

--- a/Magento_Catalog/web/css/source/module/_listings.less
+++ b/Magento_Catalog/web/css/source/module/_listings.less
@@ -255,13 +255,14 @@
 .media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__s) {
     .product-item-info {
         .products-grid & {
+        	padding: 9px;
             &:hover,
             &.active {
                 .lib-css(background, @product-item__hover__background-color1);
                 .lib-css(box-shadow, @product-item__hover__background-color1-boxShadow);
                 border: 1px solid @color-gray-light2;
-                margin: -10px;
-                padding: 9px;
+                //margin: -10px;
+                
                 position: relative;
                 z-index: 2;
 
